@@ -1,3 +1,7 @@
+2011-04-02  Kostas Nakos  <knakos@gmail.com>
+* android/*: Implement new screen cropping preferences
+
+
 ** 2.2.0 released on 2011-04-02 at Atariada in Prostejov
 
 2011-04-02  Petr Stehlik <pstehlik@sophics.cz>
